[package]
name = "bot"
version = "0.2.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"